# iris_spectrumwars_modules

./: README.md
components/gpp/: CMakeLists.txt
components/gpp/phy/: CMakeLists.txt
components/gpp/phy/DataSetCounter/: CMakeLists.txt  DataSetCounterComponent.cpp  DataSetCounterComponent.h
components/gpp/phy/FileRawWriterTemplate/: FileRawWriterTemplateComponent.cpp
components/gpp/phy/Gate/: CMakeLists.txt  GateComponent.cpp  GateComponent.h
components/gpp/phy/OfdmDemodulator/: OfdmDemodulatorComponent.cpp
components/gpp/phy/Spectrogram/: SpectrogramComponent.cpp
components/gpp/phy/TimedGate/: CMakeLists.txt  TimedGateComponent.cpp  TimedGateComponent.h
controllers/: CMakeLists.txt
controllers/Example/: CMakeLists.txt
controllers/SpectrogramDisplay/: CMakeLists.txt  SpectrogramDisplayController.cpp
controllers/SpectrumWarsAutoRx/: CMakeLists.txt  SpectrumWarsAutoRxController.cpp  SpectrumWarsAutoRxController.h
controllers/SpectrumWarsAutoTx/: CMakeLists.txt  SpectrumWarsAutoTxController.cpp  SpectrumWarsAutoTxController.h
controllers/SpectrumWarsAutoTx/test/: SpectrumWarsAutoTxController_test.cpp
controllers/SpectrumWarsDisplay/: CMakeLists.txt  SpectrumWarsDisplayController.cpp  SpectrumWarsDisplayController.h
controllers/SpectrumWarsDisplay/SpectrumWarsDisplayPlot/: CMakeLists.txt  Psdplot.cpp  Psdplot.h  SWDisplayPlotCallback.h  SpectrumWarsDisplayPlot.cpp  SpectrumWarsDisplayPlot.h  SpectrumWarsDisplayPlotWidget.cpp  SpectrumWarsDisplayPlotWidget.h  SpectrumWarsDisplayPlotWrapper.cpp  SpectrumWarsDisplayPlotWrapper.h  WinnerLabel.h
controllers/SpectrumWarsDisplay/SpectrumWarsDisplayPlot/test/: CMakeLists.txt  SpectrumWarsDisplayPlot_test.cpp
controllers/SpectrumWarsDisplay/test/: CMakeLists.txt  SpectrumWarsDisplayController_test.cpp
controllers/SpectrumWarsRx/: CMakeLists.txt  SpectrumWarsRxController.cpp  SpectrumWarsRxController.h
controllers/SpectrumWarsRx/SpectrumWarsRxGui/: CMakeLists.txt  KnobSpin.h  SWRxGuiCallback.h  SWRxGuiParams.h  SpectrumWarsRxGui.cpp  SpectrumWarsRxGui.h  SpectrumWarsRxGuiWidget.cpp  SpectrumWarsRxGuiWidget.h  SpectrumWarsRxGuiWrapper.cpp  SpectrumWarsRxGuiWrapper.h
controllers/SpectrumWarsRx/SpectrumWarsRxGui/test/: CMakeLists.txt  SpectrumWarsRxGui_test.cpp
controllers/SpectrumWarsRx/test/: CMakeLists.txt  SpectrumWarsRxController_test.cpp
controllers/SpectrumWarsRxCounter/: CMakeLists.txt  SpectrumWarsRxCounterController.cpp  SpectrumWarsRxCounterController.h  packet.proto
controllers/SpectrumWarsTx/: CMakeLists.txt  SpectrumWarsTxController.cpp  SpectrumWarsTxController.h
controllers/SpectrumWarsTx/SpectrumWarsTxGui/: CMakeLists.txt  SWTxGuiCallback.h  SWTxGuiParams.h  SpectrumWarsTxGui.cpp  SpectrumWarsTxGui.h  SpectrumWarsTxGuiWidget.cpp  SpectrumWarsTxGuiWidget.h  SpectrumWarsTxGuiWrapper.cpp  SpectrumWarsTxGuiWrapper.h
controllers/SpectrumWarsTx/SpectrumWarsTxGui/test/: CMakeLists.txt  SpectrumWarsTxGui_test.cpp
controllers/SpectrumWarsTx/test/: CMakeLists.txt  SpectrumWarsTxController_test.cpp
controllers/SpectrumWarsTxSweeper/: CMakeLists.txt  SpectrumWarsTxSweeperController.cpp  SpectrumWarsTxSweeperController.h
controllers/SpectrumWarsTxSweeper/test/: CMakeLists.txt  SpectrumWarsTxSweeperController_test.cpp
lib/generic/utility/: CMakeLists.txt
lib/generic/utility/test/: CMakeLists.txt
scripts/: setupdirectlink.sh
